app-test/testdata/typesystem/neg/type-comparison-any-type-with-any-type/check/cmp.check
testdata/typesystem/neg/type-comparison-any-type-with-any-type/src/cmp.cal:6:21: error: = is not supported with uint(size=1) and bool.
            OUT <-- 1 = false; // error
                    ^^^^^^^^^